[project]
name = "fastpy"
version = "0.1.0"
description = ""
authors = [{ name = "changlehung", email = "changlehung@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["llvmlite"]

[tool.poetry]
packages = [{ include = "fastpy", from = "src" }]

[tool.poetry.include]
files = ["src/fastpy/py.typed"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
